# qrexec-c-adapter

./: CMakeLists.txt  LICENCE  README.md  example.cpp  exec.c  libqrexec-utils.h  qrexec-agent-data.c  qrexec-agent.h  qrexec-client-vm.c  qrexec-test.cpp  qrexec.h  remote.c
example/: example.cpp
include/: qrexec-client.h
src/: ioall.c  log.c  process_io.c  qrexec-client-vm.c  replace.c
